continued on portrait mode and worked on fixing profile overflow

--- a/profile-style.css
+++ b/profile-style.css
@@ -1,5 +1,8 @@
 main {
     min-height: 650px;
+    gap: 10px;
+    max-height: 100%;
+    justify-content: start;
 }
 
 div p {
